# skmetal

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_results.txt  build.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: baseline.json  benchmark_mlx.py  benchmark_phase3.py  benchmark_suite.py  check_regression.py  run_compare.py
examples/: classification.py  clustering.py  decomposition.py  pipeline_benchmark.py  preprocessing.py  regression.py
skmetal/: LICENSE  README.md  __init__.py  _bridge.py  _config.py  _dispatch.py  accelerate.py  build.sh  pyproject.toml
skmetal/estimators/: __init__.py  _base.py  _mlx_kmeans.py  _mlx_registry.py  _registry.py  cluster.py  decomposition.py  ensemble.py  linear_model.py  naive_bayes.py  neighbors.py  preprocessing.py  svm.py
skmetal/skmetal/: __init__.py  _about.py  _bridge.py  _config.py  _dispatch.py  _fallback.py  accelerate.py  utils.py
skmetal/skmetal/estimators/: __init__.py  _base.py  _mlx_kmeans.py  _mlx_registry.py  _mlx_svd.py  _registry.py  cluster.py  decomposition.py  ensemble.py  linear_model.py  naive_bayes.py  neighbors.py  preprocessing.py  svm.py
skmetal/skmetal/kernels/: __init__.py  gemm.py  kmeans.py  pairwise_dist.py  reduction.py
skmetal/skmetal_bridge/: CMakeLists.txt  Package.swift  compile_metal.sh  generate_metal_source.py
skmetal/skmetal_bridge/Sources/SkMetalBridge/: Bridge.swift  CoreBridge.swift  KMeansBridge.swift  KNNBridge.swift  LinearAlgebraBridge.swift  LinearModelBridge.swift  LogisticBridge.swift  MetalContext.swift  MinMaxBridge.swift  PreprocessingBridge.swift  SVCBridge.swift  SVTreeBridge.swift
skmetal/skmetal_bridge/Sources/SkMetalBridge/Kernels/: ArgminKernels.metal  CenterColumns.metal  DistanceKernels.metal  ElementWiseKernels.metal  ExtraKernels.metal  GemmKernels.metal  IrlsKernels.metal  KMeansKernels.metal  KNNKernels.metal  MinMaxKernels.metal  PairwiseDistKernels.metal  ReductionKernels.metal  SIMDGroupGEMM.metal  StandardScalerKernels.metal  TreeKernels.metal
skmetal/skmetal_bridge/Sources/SkMetalBridge/MPS/: SVD.swift
skmetal/skmetal_bridge/Sources/SkMetalBridge/Memory/: BufferPool.swift  ZeroCopyBuffer.swift
skmetal/skmetal_bridge/Sources/SkMetalBridgeC/include/: bridge.h
skmetal_bridge/Sources/SkMetalBridge/: Bridge.swift  KNNBridge.swift  LinearAlgebraBridge.swift  LinearModelBridge.swift  LogisticBridge.swift  MetalContext.swift  MinMaxBridge.swift  PreprocessingBridge.swift  SVCBridge.swift
skmetal_bridge/Sources/SkMetalBridge/Kernels/: CenterColumns.metal  DistanceKernels.metal  ExtraKernels.metal  IrlsKernels.metal  KMeansKernels.metal  MinMaxKernels.metal  PairwiseDistKernels.metal  ReductionKernels.metal
skmetal_core/: skmetal_core.h  skmetal_core.m
skmetal_core.xcodeproj/: project.pbxproj
skmetal_core.xcodeproj/xcuserdata/abdoumagico.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: conftest.py  test_accelerate.py  test_comprehensive.py  test_config.py  test_correctness.py  test_dispatch.py  test_fallback.py  test_half_precision.py  test_kernels.py  test_large_matrix.py  test_mlx_estimators.py  test_mlx_fallback.py  test_mlx_registry.py  test_stress.py
