[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skmetal"
version = "0.1.0"
description = "GPU-accelerated scikit-learn via Apple Metal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
include = ["skmetal*"]
