# Repository-root pyproject.toml — tool configuration only.
# The full [project] metadata lives in skmetal/pyproject.toml (the installable
# package root).  This file holds ruff and pytest settings that apply from the
# repository root (e.g. when running ``ruff check skmetal/ tests/`` from the
# top-level directory).

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["skmetal/skmetal_bridge"]
lint.select = ["E", "F", "W", "UP"]
lint.ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 120
