[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skmetal"
version = "0.6.0"
description = "GPU-accelerated scikit-learn via Apple Metal"
readme = "README.md"
authors = [
    {name = "Ainouche Abderahmane"},
]
requires-python = ">=3.10"
license = "MIT"
keywords = ["scikit-learn", "metal", "gpu", "apple-silicon", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.31",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-benchmark>=4.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/abderahmane-ai/skmetal"
Repository = "https://github.com/abderahmane-ai/skmetal"
"Bug Tracker" = "https://github.com/abderahmane-ai/skmetal/issues"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
skmetal = ["*.dylib", "SkMetalBridge_SkMetalBridge.bundle/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["skmetal_bridge"]
lint.select = ["E", "F", "W", "UP"]
lint.ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
timeout = 120
